Changed Puzzlebang description

--- a/liquid/templates/conference/landing.html
+++ b/liquid/templates/conference/landing.html
@@ -15,7 +15,7 @@
 			<hr />
 			<p>Reflections | Projections, the annual computing conference at the 
 			  <a href="http://illinois.edu">University of Illinois Urbana-Champaign,</a> 
-			  will be returning this October! Come hear exciting speakers from across industry and academia! Look for a career at our CS/ECE job fair, or if you are more interested in the startup world, our new Startup Fair! In a competitive mood? Participate in MechMania, a 24-hour programming competition, or <a href="http://puzzlebang.com">PuzzleBang</a>!, a fun series of cryptography games! </p>
+			  will be returning this October! Come hear exciting speakers from across industry and academia! Look for a career at our CS/ECE job fair, or if you are more interested in the startup world, our new Startup Fair! In a competitive mood? Participate in MechMania, a 24-hour programming competition, or <a href="http://puzzlebang.com">PuzzleBang</a>!, a fun series of puzzles! </p>
 			
 		  </div>
 		</div>
