Modified group manager to allow ACM admin admins (people marked as admin inside of the admin group on liquid. Inception yet?) to modify groups. The purpose of this change is not to transfer responsibility for liquid to admin, but to allow admin to help SIG Chairs with liquid rather than bugging top4. Approved by Rob.

--- a/liquid/templates/intranet/group_manager/main.html
+++ b/liquid/templates/intranet/group_manager/main.html
@@ -3,7 +3,7 @@
 <header class="page-header">
 <h1>Group Manager</h1>
 </header>
-{% if user.is_top4 %}
+{% if user.is_top4 or user.is_acm_admin %}
 <p>
 	<a href="/intranet/group/new" class="btn">Create New Group</a>
 </p>
