--- a/liquid/templates/conference/landing.html
+++ b/liquid/templates/conference/landing.html
@@ -12,18 +12,24 @@
 		<div class="span12">
 		  <div id="save-the-date">
 			<h2>October 10 - 13, 2013</h2>
-			<hr />
+              <hr />
 			<p>Reflections | Projections, the annual computing conference at the 
 			  <a href="http://illinois.edu">University of Illinois Urbana-Champaign,</a> 
 			  will be returning this October! Come hear exciting speakers from across industry and academia! Look for a career at our CS/ECE job fair, or if you are more interested in the startup world, our new Startup Fair! In a competitive mood? Participate in MechMania, a 24-hour programming competition, or <a href="http://puzzlebang.com">PuzzleBang</a>!, a fun series of puzzles! </p>
-			
-		  </div>
+              <br />
+              <p>Interested in attending? The conference is free and open to all, but please
+                  pre-register to receive a free t-shirt!</p>
+              <h2>
+                  <a href="http://acmreflections.eventbrite.com?ref=elink" target="_blank">Register Now! (It's Free!)</a>
+              </h2>
+          </div>
 		</div>
 	  </div>
 	  
 	  <div class="row">
-		<hr />
-		<div id="event-dates" class="span12">
+          <div class="span12">
+              <hr />
+              <div id="event-dates">
 		  <div class="span3 event-day">
 			<h3>Thursday, October 10</h3>
 			<li>Startup Fair</li>
@@ -42,11 +48,13 @@
 		  <div class="span3 event-day">
 			<h3>Sunday, October 13</h3>
 			<li>Mechmania Closing Ceremony</li>
-		  </div>
-		</div>
-	  </div>
+          </div>
+              </div>
+          </div>
+      </div>
+        <br />
 	  <div class="row">
-		<div class="span12">
+          <div class="span12">
 		  <form class="form-inline well email-subscribe" method="get" action="/conference/subscribe/">
 			<div class="message"></div>
 			<label for="subscribe">Subscribe to recieve updates!  </label> 
@@ -55,10 +63,10 @@
 			  <button type="submit" class="btn">Subscribe</button>
 			</div>
 		  </form>
+              <hr />
 			</div>
 	  </div>
-	  
-		<hr />
+
 		<div class="row">
 		  <div class="social-links span12">
 			<a href="mailto:conference-chair@acm.uiuc.edu">Send us an Email</a>
