--- a/liquid/static/css/conference.scss
+++ b/liquid/static/css/conference.scss
@@ -120,3 +120,9 @@ hr {
   margin-top: 30px;
   background-color: #eee;
   padding: 10px; }
+
+.center {
+  float: none;
+  margin-left: auto;
+  margin-right: auto;
+}
