--- a/liquid/templates/intranet/jobfair_manager/companies.html
+++ b/liquid/templates/intranet/jobfair_manager/companies.html
@@ -11,6 +11,17 @@
   <a class="pull-right btn btn-primary" href="/intranet/jobfair_manager/companies/new">Create Account</a></p>
 {% if companies|length > 0 %}
 <hr>
+<ul class="nav nav-tabs">
+  <li {% if request.GET.type == None %}class="active"{% endif %}>
+    <a href="/intranet/jobfair_manager/companies">All</a>
+  </li>
+  <li {% if request.GET.type == "jobfair" %}class="active"{% endif %}>
+    <a href="/intranet/jobfair_manager/companies?type=jobfair">Job Fair</a>
+  </li>
+  <li {% if request.GET.type == "startup" %}class="active"{% endif %}>
+    <a href="/intranet/jobfair_manager/companies?type=startup">Startup Fair</a>
+  </li>
+</ul>
     <table class="table table-striped">
         <thead>
         <tr>
@@ -32,8 +43,10 @@
       <td>{% if c.invited %}<i title="{{ c.invited_by.get_full_name }} on {{ c.invited_on }}" class="icon-ok"></i>{%  endif  %}</td>
     <td>
         <a href="/intranet/jobfair_manager/companies/delete/{{c.id}}"><i class="icon-trash"></i> Delete</a>
+	{% if not c.invited %}
         &middot;
         <a href="/intranet/jobfair_manager/companies/invite/{{c.id}}"><i class="icon-envelope"></i> Invite</a>
+	{% endif %}
     </td>
   </tr>
   {% endfor %}
