--- a/liquid/templates/intranet/job_manager/main.html
+++ b/liquid/templates/intranet/job_manager/main.html
@@ -10,8 +10,12 @@
   {% if job_count %}
 <div class="alert alert-info">
   <button type="button" class="close" data-dismiss="alert">&times;</button>
-  There are <strong> {{job_count}} </strong> jobs to be sent
-      <a href="/intranet/jobs/sendEmail" class="job-email pull-right"><strong>Send Job Email</strong></a>
+  {% if job_count == 1 %}
+    There is <strong> {{job_count}} </strong> job to be sent
+  {% else %}
+    There are <strong> {{job_count}} </strong> jobs to be sent
+  {% endif %}
+    <a href="/intranet/jobs/sendEmail" class="job-email pull-right"><strong>Send Job Email</strong></a>
 </div>
   {% endif %}
 {% endif %}
