--- a/liquid/templates/intranet/job_manager/main.html
+++ b/liquid/templates/intranet/job_manager/main.html
@@ -8,7 +8,7 @@
 
 {% if user.is_top4%}
   {% if job_count %}
-<div class="alert alert-info">
+<div class="alert alert-{{urgency}}">
   <button type="button" class="close" data-dismiss="alert">&times;</button>
   {% if job_count == 1 %}
     There is <strong> {{job_count}} </strong> job to be sent
