made singular item notifications a little more human

--- a/liquid/templates/intranet/main.html
+++ b/liquid/templates/intranet/main.html
@@ -34,7 +34,7 @@
    <div class="alert alert-{{pend_class}}">
       <button type="button" class="close" data-dismiss="alert">&times;</button>
       {% if pend_jobs_count == 1 %}
-         There is <strong> {{pend_jobs_count}} </strong> job to be approved!
+         There is a job to be approved!
       {% else %}
          There are <strong> {{pend_jobs_count}} </strong> jobs to be approved!
       {% endif %}
@@ -45,7 +45,7 @@
    <div class="alert alert-{{unsent_class}}">
       <button type="button" class="close" data-dismiss="alert">&times;</button>
       {% if unsent_jobs_count == 1 %}
-         There is <strong> {{unsent_jobs_count}} </strong> job to be sent!
+         There is a job to be sent!
       {% else %}
          There are <strong> {{unsent_jobs_count}} </strong> jobs to be sent!
       {% endif %}
@@ -56,7 +56,7 @@
    <div class="alert alert-{{res_class}}">
       <button type="button" class="close" data-dismiss="alert">&times;</button>
       {% if resume_count == 1 %}
-         There is <strong> {{resume_count}} </strong> resume to be approved!
+         There is a resume to be approved!
       {% else %}
          There are <strong> {{resume_count}} </strong> resumes to be approved!
       {% endif %}
