--- a/liquid/templates/intranet/job_manager/main.html
+++ b/liquid/templates/intranet/job_manager/main.html
@@ -11,9 +11,9 @@
 <div class="alert alert-{{urgency}}">
   <button type="button" class="close" data-dismiss="alert">&times;</button>
   {% if job_count == 1 %}
-    There is <strong> {{job_count}} </strong> job to be sent
+    There is a job to be sent!
   {% else %}
-    There are <strong> {{job_count}} </strong> jobs to be sent
+    There are <strong> {{job_count}} </strong> jobs to be sent!
   {% endif %}
     <a href="/intranet/jobs/sendEmail" class="job-email pull-right"><strong>Send Job Email</strong></a>
 </div>
