--- a/liquid/templates/intranet/event_manager/main.html
+++ b/liquid/templates/intranet/event_manager/main.html
@@ -48,6 +48,7 @@
 {{mail_text}}
     </pre>
   </div>
+  <a class="btn btn-primary event-button pull-right" href="/intranet/event/sendEmail">Send Email</a>
 </div>
 {% endif %}
 {% endblock %}
