--- a/liquid/templates/intranet/job_manager/email_preview.html
+++ b/liquid/templates/intranet/job_manager/email_preview.html
@@ -5,10 +5,10 @@
 {% block intranet_content %}
 <header class="page-header">
   <h1>Email Preview
-    <a href='/intranet/jobs/sendEmail' class="btn btn-primary send-email pull-right">
+    <a href='/intranet/jobs/sendEmail' class="btn btn-primary send-job pull-right">
       Send Email
     </a>
-    <a href='/intranet/jobs/testEmail' class="btn send-email pull-right">
+    <a href='/intranet/jobs/testEmail' class="btn send-job pull-right">
       Send Test Email
     </a>
   </h1>
