removed graduated members from contact page

--- a/liquid/templates/contact.html
+++ b/liquid/templates/contact.html
@@ -28,13 +28,9 @@
     
     <p><strong>Cluster Admins</strong><br>
        Dylan Nugent, 
-       Sean Nicolay, 
-       Drew Cross, 
-       Nick Tabick, 
        Josh Ginsburg, 
        Sam Laane, 
        Cole Gleason, 
-       Kurtis Nusbaum,
        Matthew Dierker, 
        Nathan Handler, 
        Calvin Shirley
@@ -43,7 +39,6 @@
      </p>
 
      <p><strong>Corporate Committee</strong><br>
-        Ciara Proctor, Brianna Birman,
         Nikoli Dryden, Jicong Wang, 
         Nelson Osacky, Cole Gleason, 
         Nathan Handler<br>
@@ -51,7 +46,7 @@
      </p>
      
      <p><strong>Social Chairs</strong><br>
-        Ciara Proctor, Clare Curtis<br>
+        Clare Curtis, Matthew Dierker<br>
         <a href="mailto:social@uiuc.edu">social@acm.uiuc.edu</a>
      </p>
      
