Implemented django-bootstrap-pagination for quote db

--- a/liquid/templates/quotedb/add.html
+++ b/liquid/templates/quotedb/add.html
@@ -1,6 +1,6 @@
-{% extends "base.html" %}
+{% extends "intranet/base.html" %}
 
-{% block content %}
+{% block intranet_content %}
 <header>
     <h1>
         Add Quote
