--- a/liquid/templates/intranet/base.html
+++ b/liquid/templates/intranet/base.html
@@ -42,6 +42,9 @@
             <li{% if page == 'resume' %} class='active'{% endif %}>
               <a href="/intranet/resume">Resume Manager</a>
             </li> 
+            <li{% if page == 'quotedb' %} class='active'{% endif %}>
+              <a href="/quotedb/">Quote Database</a>
+            </li>
           <li class="nav-header">Conference</li>
             <li{% if page == 'jobfair' %} class='active'{% endif %}>
               <a href="/intranet/jobfair_manager/companies">Job Fair Manager</a>
