--- a/liquid/templates/quotedb/main.html
+++ b/liquid/templates/quotedb/main.html
@@ -13,13 +13,13 @@
     <p>Memorable quotes from ACM members past and present</p>
 
     <div>       
-            <form class="form-search" method="GET" action="/quotedb/main/">
+            <form class="form-search" method="GET" action="/quotedb/">
                 
                 <div class="offset0 span4" style="margin-left:0px">
                     <a href="/quotedb/add" class="btn btn-primary">Add quote</a>
                 </div>
                 <div>
-                    <input type="text" name="q" class="input-large search-query" style="margin-left:40px" value="{% if q %}{{q}}{% endif %}">
+                    <input type="text" name="q" class="input-large search-query" style="margin-left:40px" value="{% if searchArg %}{{searchArg}}{% endif %}">
                     <button type="submit" class="btn">Search</button>
                 </div>
                 
