Added my own hashtag implementation

--- a/liquid/templates/quotedb/main.html
+++ b/liquid/templates/quotedb/main.html
@@ -30,7 +30,9 @@
 {% for q in quotePage %}
     <div class="row">
         <div class="quote span8" style="padding-left:25px">
+            {% autoescape off %}
             {{ q.quote_text }}
+            {% endautoescape %}
         </div>
         <br />
         <div class="quote offset6 span4" style="color: #888888">
