Renamed app from 'quotedb' to 'quote'; added quote-editing functionality (that does not save changes or delete yet, and isn't access-controlled)

--- a/liquid/templates/intranet/base.html
+++ b/liquid/templates/intranet/base.html
@@ -42,8 +42,8 @@
             <li{% if page == 'resume' %} class='active'{% endif %}>
               <a href="/intranet/resume">Resume Manager</a>
             </li> 
-            <li{% if page == 'quotedb' %} class='active'{% endif %}>
-              <a href="/quotedb/">Quote Database</a>
+            <li{% if page == 'quote' %} class='active'{% endif %}>
+              <a href="/intranet/quote/">Quote Database</a>
             </li>
           <li class="nav-header">Conference</li>
             <li{% if page == 'jobfair' %} class='active'{% endif %}>
