--- a/liquid/templates/intranet/quote/add.html
+++ b/liquid/templates/intranet/quote/add.html
@@ -13,7 +13,7 @@
 
     <div>
         <button type="submit" class="btn btn-primary">Add quote</button>
-        <a href="/intranet/quotedb/" class="btn btn-secondary">Cancel</a>
+        <a href="/intranet/quote/" class="btn btn-secondary">Cancel</a>
     </div>
 </form>
 {% endblock %}
