Added permissions to the edit/delete system

--- a/liquid/templates/intranet/quote/edit.html
+++ b/liquid/templates/intranet/quote/edit.html
@@ -12,9 +12,9 @@
     {{ form }}
 
     <div>
-        <button type="submit" class="btn btn-primary">Save changes</button>
+        <button name="save" type="submit" class="btn btn-primary">Save changes</button>
         <a href="/intranet/quote/" class="btn btn-secondary">Cancel</a>
-        <button class="btn btn-danger">Delete</a>
+        <button name="delete" type="submit" class="btn btn-danger">Delete</a>
     </div>
 </form>
 {% endblock %}
