The <hr> no longer appears under the very last quote on the quote list (this is the desired behavior)

--- a/liquid/templates/intranet/quote/main.html
+++ b/liquid/templates/intranet/quote/main.html
@@ -43,10 +43,11 @@
                 {% endif %}
             </div>
             <br />
-            {% if 
-            <div class="span9">
-                <hr>
-            </div>
+            {% if not forloop.last %}
+                <div class="span9">
+                    <hr>
+                </div>
+            {% endif %}
         </div>
     {% endfor %}
 {% else %}
