--- a/liquid/templates/intranet/quote/edit.html
+++ b/liquid/templates/intranet/quote/edit.html
@@ -1,4 +1,5 @@
 {% extends "intranet/base.html" %}
+{% load bootstrap %}
 
 {% block intranet_content %}
 <header>
@@ -17,4 +18,17 @@
         <button name="delete" type="submit" class="btn btn-danger">Delete</a>
     </div>
 </form>
+{% endblock %}
+
+{% block bottom_scripts %}
+<script src="/static/js/jquery.tokeninput.js"></script>
+<script type="text/javascript">
+$(document).ready(function() {
+    $("#id_quote_sources").tokenInput([
+        {% for m in members %}
+        {id: "{{m.username}}", name: "{{m.full_name_and_netid}}"},
+        {% endfor %}
+    ],{preventDuplicates:true});
+});
+</script>
 {% endblock %}
