Quote editing page's 'quote sources' field is now automatically prepopulated properly

--- a/liquid/templates/intranet/quote/edit.html
+++ b/liquid/templates/intranet/quote/edit.html
@@ -34,7 +34,17 @@ $(document).ready(function() {
         {% for m in members %}
         {id: "{{m.username}}", name: "{{m.full_name_and_netid}}"},
         {% endfor %}
-    ],{preventDuplicates:true});
+    ],
+    {
+        preventDuplicates:true,
+        prePopulate:
+        [
+            {% for q in quoteMembers %}
+            {id: "{{q.username}}", name: "{{q.full_name_and_netid}}"},
+            {% endfor %}
+        ],
+    }
+    );
 });
 </script>
 {% endblock %}
