--- a/liquid/templates/intranet/quote/add.html
+++ b/liquid/templates/intranet/quote/add.html
@@ -33,7 +33,9 @@ $(document).ready(function() {
         {% for m in members %}
         {id: "{{m.username}}", name: "{{m.full_name_and_netid}}"},
         {% endfor %}
-    ],{preventDuplicates:true});
+    ],{
+        preventDuplicates:true
+    });
 });
 </script>
 {% endblock %}
