--- a/liquid/templates/intranet/quote/main.html
+++ b/liquid/templates/intranet/quote/main.html
@@ -38,7 +38,7 @@
             <br />
             <div class="quote offset3 span5" style="padding-left:55px; color: #888888; text-align: right">
                 {% autoescape off %}{{ q.quote_source_html }}{% endautoescape %}, {{ q.created_at }}
-                {% if q.can_edit %}
+                {% if q.canEdit %}
                     | <a href="edit/{{ q.id }}">Edit/Delete</a>
                 {% endif %}
             </div>
