Fixing @uiuc emails - there really weren't many on the site.  Most are @acm.uiuc.edu emails, which are all still in various states of use.

--- a/liquid/templates/base.html
+++ b/liquid/templates/base.html
@@ -82,7 +82,7 @@
     </div> <!-- /container -->
     
     <footer class="container">
-        ACM@UIUC | <a href="tel:12173335828">(217)-333-5828</a> | <a href="mailto:acm@uiuc.edu">acm@uiuc.edu</a> | Ste. 1104 Thomas M. Siebel Center for Computer Science, 201 N. Goodwin Ave. Urbana, IL 61801
+        ACM@UIUC | <a href="tel:12173335828">(217)-333-5828</a> | <a href="mailto:acm@illinois.edu">acm@illinois.edu</a> | Ste. 1104 Thomas M. Siebel Center for Computer Science, 201 N. Goodwin Ave. Urbana, IL 61801
     </footer>
 
     <!-- Le javascript
