--- a/liquid/templates/contact.html
+++ b/liquid/templates/contact.html
@@ -8,7 +8,7 @@
     <h2>Contacts</h2>
     <p><strong>Chair</strong><br>
         Robert Pieta<br>
-        <a href="mailto:acm@uiuc.edu">acm@uiuc.edu</a>
+        <a href="mailto:acm@illinois.edu">acm@illinois.edu</a>
     </p>
     
     <p><strong>Vice Chair</strong><br>
@@ -47,12 +47,12 @@
      
      <p><strong>Social Chairs</strong><br>
         Clare Curtis, Matthew Dierker<br>
-        <a href="mailto:social@uiuc.edu">social@acm.uiuc.edu</a>
+        <a href="mailto:social@acm.uiuc.edu">social@acm.uiuc.edu</a>
      </p>
      
      <p><strong>Banks Editor</strong><br>
         Brendan Ryan<br>
-        <a href="mailto:boneyard@acm.uiuc.edu">boneyard@uiuc.edu</a>
+        <a href="mailto:boneyard@acm.uiuc.edu">boneyard@acm.uiuc.edu</a>
       </p>
 
   </div>
@@ -68,7 +68,7 @@
 
     <p>(217) 333&ndash;5828</p>
     <p>
-    If you have general questions about ACM, you can call our office between 9 AM and 5 PM Monday through Friday, and someone will be happy to answer them.  If you prefer email, send mail to <a href="mailto:acm@uiuc.edu">acm@uiuc.edu</a>.
+    If you have general questions about ACM, you can call our office between 9 AM and 5 PM Monday through Friday, and someone will be happy to answer them.  If you prefer email, send mail to <a href="mailto:acm@illinois.edu">acm@illinois.edu</a>.
     </p>
   </div>
 </div>
